# LCD_Project

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
components/lvgl/src/misc/: lv_color.h
components/tft_library/: CMakeLists.txt  ILI9486.c  ILI9486.h  lcd_com.c  lcd_com.h
main/: CMakeLists.txt  main.c
